test1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    env: sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      env: sandbox
  template:
    metadata:
      labels:
        env: sandbox
    spec:
    containers:
      - name: nginx2
        image: krishnakant888/nginx2
        ports:
        - containerPort: 80

kind: Deployment
metadata:
  name: nginx-deployment2
  labels:
    env: sandbox2
spec:
  replicas: 3
  selector:
    matchLabels:
      env: sandbox2
  template:
    metadata:
      labels:
        env: sandbox2
    spec:
      containers:
      - name: nginx
        image: krishnakant888/nginx
        ports:
        - containerPort: 80
