test1/deploymwnt2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2
  labels:
    env: sandbox2
spec:
  replicas: 3
  selector:
    matchLabels:
      env: sandbox2
  template:
    metadata:
      labels:
        env: sandbox2
    spec:
      containers:
      - name: nginx
        image: krishnakant888/nginx2:new
        ports:
        - containerPort: 80
