test1/service2.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service2
  labels:
    env: sandbox2
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    env: sandbox2
