test1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
  nginx.ingress.kubernetes.io/use-regex: "true"
  nginx.ingress.kubernetes.io/rewrite-target: /$1  
spec:
  rules:
     - http:  
        paths:
          - path: /kk
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80

          - path: /pk
            pathType: Prefix
            backend:
              service:
                name: nginx-service2
                port:
                  number: 80
